# StackQueueOp

./: README.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  QueueApp.cxx  StackApp.cxx
src/core/: Array.h  CMakeLists.txt  Queue.h  Stack.h
src/tests/: CMakeLists.txt  mwQueueTests.cxx  mwStackTests.cxx
